# apps/api/src/modules/product-stocks/dto/create-product-stock.dto.ts
@@ -1,16 +1,0 @@
-import { IsNotEmpty, IsNumber, IsString } from 'class-validator';
-import { ProductStock } from '@repo/types';
-
-export class CreateProductStockDto implements Omit<ProductStock, 'id'> {
-  @IsNotEmpty()
-  @IsNumber()
-  product_id: number;
-
-  @IsNotEmpty()
-  @IsString()
-  size: string;
-
-  @IsNotEmpty()
-  @IsNumber()
-  quantity: number;
-}
