# apps/api/src/modules/product-stocks/dto/update-product-stock.dto.ts
@@ -1,4 +1,0 @@
-import { PartialType } from '@nestjs/mapped-types';
-import { CreateProductStockDto } from './create-product-stock.dto';
-
-export class UpdateProductStockDto extends PartialType(CreateProductStockDto) {}
